fix non visible lines

--- a/css/style.css
+++ b/css/style.css
@@ -445,7 +445,7 @@ header{
 .cbp-item figure figcaption {
     z-index: 10;
     padding-left: 20px;
-    padding-top: 35%;
+    padding-top: 32%;
 }
 
 .cbp-item figure figcaption, .cbp-item figure:after {
